--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "framer-motion": "^10.16.5",
+    "lucide-react": "^0.541.0",
     "next": "^14.0.3",
     "rc-slider": "^10.4.0",
     "react": "18.2.0",
