--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^5.2.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
@@ -19,6 +20,7 @@
     "@types/glidejs__glide": "^3.6.4",
     "@types/node": "20.9.2",
     "@types/react": "18.2.37",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "18.2.15",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
@@ -27,14 +29,17 @@
     "next": "^14.0.3",
     "rc-slider": "^10.4.0",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.62.0",
     "react-hooks-global-state": "^2.1.0",
     "react-hot-toast": "^2.4.1",
     "react-swipeable": "^7.0.1",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
     "sass": "^1.69.5",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^4.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
