--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "18.2.37",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "18.2.15",
+    "axios": "^1.11.0",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "framer-motion": "^10.16.5",
@@ -39,7 +40,8 @@
     "react-use-keypress": "^1.3.1",
     "sass": "^1.69.5",
     "typescript": "5.2.2",
-    "zod": "^4.1.2"
+    "zod": "^4.1.2",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
