--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-toastify": "^11.0.5",
     "react-use": "^17.4.0",
     "react-use-keypress": "^1.3.1",
+    "recharts": "^3.1.2",
     "sass": "^1.69.5",
     "typescript": "5.2.2",
     "zod": "^4.1.2",
