--- a/.env
+++ b/.env
@@ -3,3 +3,13 @@
 NEXT_PUBLIC_API_URL=http://localhost:5000/api
 
 API_URL=http://localhost:5000/api
+
+
+
+
+## Nextauth
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+FACEBOOK_CLIENT_ID=your_facebook_client_id
+FACEBOOK_CLIENT_SECRET=your_facebook_client_secret
+NEXTAUTH_SECRET=your_nextauth_secret_key
