--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.541.0",
     "next": "^14.0.3",
+    "next-auth": "^4.24.11",
     "rc-slider": "^10.4.0",
     "react": "18.2.0",
     "react-color": "^2.19.3",
@@ -42,7 +43,7 @@
     "recharts": "^3.1.2",
     "sass": "^1.69.5",
     "typescript": "5.2.2",
-    "zod": "^4.1.2",
+    "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
