--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ GOOGLE_CLIENT_SECRET=your_google_client_secret
 FACEBOOK_CLIENT_ID=your_facebook_client_id
 FACEBOOK_CLIENT_SECRET=your_facebook_client_secret
 NEXTAUTH_SECRET=your_nextauth_secret_key
+
+NEXTAUTH_URL=http://localhost:3000
