auth with oauth  & OIC

--- a/.env
+++ b/.env
@@ -8,10 +8,11 @@ API_URL=http://localhost:5000/api
 
 
 ## Nextauth
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=33252398015-vualomprv6aud0nhc31o0l4nhi2ok6qm.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
 FACEBOOK_CLIENT_ID=your_facebook_client_id
 FACEBOOK_CLIENT_SECRET=your_facebook_client_secret
-NEXTAUTH_SECRET=your_nextauth_secret_key
+NEXTAUTH_SECRET=skjhbksqbkgfbkbqskgbkjsqbkgb1645456465465465
 
 NEXTAUTH_URL=http://localhost:3000
