--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.20",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5"
