--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
 
-NEXT_PUBLIC_API_URL=http://localhost:5000/api
+NEXT_PUBLIC_API_URL=http://54.90.226.225:5000/api
 
-API_URL=http://localhost:5000/api
+API_URL=http://54.90.226.225:5000/api
 
 
 
