refactor: implement revalidation logic with secret and tag handling in API route

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ NEXT_PUBLIC_API_URL=http://localhost:5000/api
 
 API_URL=http://localhost:5000/api
 
+REVALIDATE_SECRET=your_revalidate_secret_key
+
 
 
 
